--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
-  "author": "AAKASH_Is_BEST",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -17,7 +17,10 @@
     "express-fileupload": "^1.2.1",
     "express-jwt": "^6.0.0",
     "express-validator": "^6.10.0",
+    "generate-unique-id": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemon": "^1.19.4",
+    "npm": "^6.13.0"
   }
 }
